--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,7 +3,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
-		<h1>Hello, World</h1>
-		<p></p>
+		<header><h1>threddit</h1></header>
+		<main>
+		<h2>{{post_name}}</h2>
+		</main>
+		<footer>Copyright &copy; James & Jamie<br><small>Want to advertise here? Contact Jamie <em>discreetly</em></small></footer>
 	</body>
 </html>
