--- a/src/html/index.html
+++ b/src/html/index.html
@@ -6,7 +6,12 @@
 	<body>
 		<header><h1>threddit</h1></header>
 		<main>
-		<h2>{{post_name}}</h2>
+		<article>
+			<h2>{{post_name}}</h2>
+			<form class="user-reply">
+
+			</form>
+		</article>
 		</main>
 		<footer>Copyright &copy; James & Jamie<br><small>Want to advertise here? Contact Jamie <em>discreetly</em></small></footer>
 	</body>
