--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="description" content="threddit - the unstructured mega-directory forum">
 		<style>/*style*/</style>
 	</head>
 	<body>
