--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,9 +12,9 @@
 					<h2><!--title--></h2> <span class="user">@<!--user--></span>
 					<p><!--content--></p>
 				</article>
-				<form class="user-subpost" method="POST" action="a" >
-					<span class="user-subpost-title">A<input id="title" maxlength="1" autocomplete="off"></span>
-					<textarea maxlength="512" id="content"></textarea>
+				<form class="user-subpost" method="POST" action="<!--title-->" >
+					<span class="user-subpost-title"><!--title--><input name="title" maxlength="1" autocomplete="off"></span>
+					<textarea maxlength="512" name="content"></textarea>
 					<button type="submit">Post</button>
 				</form>
 				<div class="subpost-group">
