--- a/src/html/index.html
+++ b/src/html/index.html
@@ -35,6 +35,7 @@
 		</main>
 		<aside>
 			<h3>Welcome!</h3>
+			<!--username-->
 			<p>This is treply. It's a mega-forum where every post title contains the title of the post it's replying to.
 				That might seem like a wierd gimmick, and it really is.</p>
 			<section class="login-container">
