style login error

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -55,8 +55,9 @@
 				</form>
 				<form class="register" method="POST" action="<!--title-->?register">
 					<label>
-						<input name="email" placeholder="Email" />
-						<input name="password" placeholder="Password" />
+						<input name="username" placeholder="Username">
+						<input name="email" type="email"  placeholder="Email" />
+						<input name="password" type="password" placeholder="Password" />
 						<button type="submit">Register</button>
 					</label>
 				</form>
