add josh to copyright notice

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -77,7 +77,7 @@
 
 	</section>
 
-	<footer>Copyright &copy; James & Jamie<br><small>Want to advertise here? Contact Jamie <em>discreetly</em></small>
+	<footer>Copyright &copy; James, Jamie & Josh <br><small>Want to advertise here? Contact Jamie <em>discreetly</em></small>
 	</footer>
 </body>
 
