added conditional rendering of the create post ui.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,12 +23,14 @@
 					<!--content-->
 				</p>
 			</article>
+			<!--createPostUIStart-->
 			<form class="user-subpost" method="POST" action="<!--title-->">
 				<span class="user-subpost-title">
 					<!--title--><input name="title" maxlength="1" autocomplete="off"></span>
 				<textarea maxlength="512" name="content"></textarea>
 				<button type="submit">Post</button>
 			</form>
+			<!--createPostUIEnd-->
 			<div class="subpost-group">
 				<!--replies-->
 			</div>
@@ -56,7 +58,7 @@
 				<form class="register" method="POST" action="<!--title-->?register">
 					<label>
 						<input name="username" placeholder="Username">
-						<input name="email" type="email"  placeholder="Email" />
+						<input name="email" type="email" placeholder="Email" />
 						<input name="password" type="password" placeholder="Password" />
 						<button type="submit">Register</button>
 					</label>
@@ -77,7 +79,8 @@
 
 	</section>
 
-	<footer>Copyright &copy; James, Jamie & Josh <br><small>Want to advertise here? Contact Jamie <em>discreetly</em></small>
+	<footer>Copyright &copy; James, Jamie & Josh <br><small>Want to advertise here? Contact Jamie
+			<em>discreetly</em></small>
 	</footer>
 </body>
 
