--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
 
 <body>
 	<header>
-		<h1>treply</h1>
+		<a class="page-title" href="/">treply</a>
 	</header>
 	<section class="container">
 		<main>
