simple delete button.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,6 +23,15 @@
 				<p>
 					<!--content-->
 				</p>
+				<!--editPostUIStart-->
+				<form class="delete" method="POST" action="<!--title-->?delete">
+					<label>
+						<button type="submit">delete</button>
+						<!--loginError-->
+					</label>
+				</form>
+				<!--editPostUIEnd-->
+
 			</article>
 			<!--createPostUIStart-->
 			<form class="user-subpost" method="POST" action="<!--title-->">
